--- a/index.html
+++ b/index.html
@@ -8,17 +8,6 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;500;700&family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
     <script>
-      // Polyfill process for browser environments.
-      // REPLACE 'YOUR_API_KEY_HERE' WITH YOUR ACTUAL GOOGLE GEMINI API KEY IF DEPLOYING STATICALLY
-      if (typeof process === 'undefined') {
-        window.process = { 
-          env: { 
-            API_KEY: 'AIzaSyAFPDVhx1bwIO6_xcChyqF8xafxyjMTPxM' 
-          } 
-        };
-      }
-    </script>
-    <script>
       tailwind.config = {
         theme: {
           extend: {
@@ -131,8 +120,7 @@
     "react/": "https://esm.sh/react@^19.2.3/",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "lucide-react": "https://esm.sh/lucide-react@^0.560.0",
-    "canvas-confetti": "https://esm.sh/canvas-confetti@1.9.2",
-    "@google/genai": "https://esm.sh/@google/genai@^1.33.0"
+    "canvas-confetti": "https://esm.sh/canvas-confetti@1.9.2"
   }
 }
 </script>
