--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -14,6 +15,9 @@
             fontFamily: {
               sans: ['Nunito', 'sans-serif'],
               mono: ['"Roboto Mono"', 'monospace'],
+            },
+            animation: {
+              'spin-slow': 'spin 3s linear infinite',
             },
             colors: {
               // Custom requested color
