--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -16,10 +17,9 @@
               mono: ['"Roboto Mono"', 'monospace'],
             },
             colors: {
-              // Custom requested color
-              'frog-green': '#40D672',
+              // Map frog-green to the themed 500 variable
+              'frog-green': 'var(--frog-500)',
               
-              // Map existing frog colors to CSS variables for dynamic theming
               frog: {
                 50: 'var(--frog-50)',
                 100: 'var(--frog-100)',
@@ -50,21 +50,18 @@
       }
     </script>
     <style>
-      /* Default Theme (Classic Pond) definition */
       :root {
-        /* Brand Colors (Green) - Updated to match #40D672 base */
         --frog-50: #f0fdf4;
         --frog-100: #dcfce7;
         --frog-200: #bbf7d0;
         --frog-300: #86efac;
-        --frog-400: #40D672; /* The Target Green */
-        --frog-500: #40D672; /* Using target as primary */
+        --frog-400: #40D672;
+        --frog-500: #40D672;
         --frog-600: #16a34a;
         --frog-700: #15803d;
         --frog-800: #166534;
         --frog-900: #14532d;
 
-        /* Neutral Colors (Stone/Beige warm) */
         --stone-50: #fafaf9;
         --stone-100: #f5f5f4;
         --stone-200: #e7e5e4;
@@ -76,7 +73,6 @@
         --stone-800: #292524;
         --stone-900: #1c1917;
 
-        /* Base Background */
         --bg-body: #f7f7f5; 
         --text-body: #44403c;
       }
@@ -84,21 +80,20 @@
       body {
         background-color: var(--bg-body);
         color: var(--text-body);
-        transition: background-color 0.5s ease, color 0.5s ease;
+        transition: background-color 0.8s cubic-bezier(0.4, 0, 0.2, 1), color 0.5s ease;
+        overflow-x: hidden;
       }
 
-      /* Smooth transition for all themed elements */
       *, *::before, *::after {
-        transition-property: background-color, border-color, color, fill, stroke;
+        transition-property: background-color, border-color, color, fill, stroke, box-shadow;
         transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-        transition-duration: 300ms;
+        transition-duration: 400ms;
       }
 
       .caret-blink {
         opacity: 1; 
       }
       
-      /* Custom scrollbar for webkit */
       .custom-scrollbar::-webkit-scrollbar {
         width: 6px;
       }
@@ -106,11 +101,8 @@
         background: transparent;
       }
       .custom-scrollbar::-webkit-scrollbar-thumb {
-        background-color: var(--stone-200);
-        border-radius: 20px;
-      }
-      .custom-scrollbar::-webkit-scrollbar-thumb:hover {
         background-color: var(--stone-300);
+        border-radius: 20px;
       }
     </style>
   <script type="importmap">
