--- a/index.html
+++ b/index.html
@@ -112,7 +112,9 @@
     "react/": "https://esm.sh/react@^19.2.3/",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "lucide-react": "https://esm.sh/lucide-react@^0.560.0",
-    "canvas-confetti": "https://esm.sh/canvas-confetti@1.9.2"
+    "canvas-confetti": "https://esm.sh/canvas-confetti@1.9.2",
+    "epubjs": "https://esm.sh/epubjs@0.3.93",
+    "pdfjs-dist": "https://esm.sh/pdfjs-dist@4.5.136"
   }
 }
 </script>
